--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -91,9 +91,9 @@
   </button>
 </div>
 
-<section class="about bg-success my-5">
-  <div class="container bg-danger">
-    <div class="text-center bg-primary my-5">
+<section class="about my-5">
+  <div class="container">
+    <div class="text-center my-5">
       <h1>About me</h1>
       <hr style="height: 2px; background-color: black;">
     </div>
